<resources>
    <string name="app_name">Binus GLS2 GalleryApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_images">All Images</string>
    <string name="folders">Folders</string>
    <string name="empty_label">Nothing to show</string>
    <string name="title_activity_about">About</string>

    <string name="app_description">A simple gallery app for BINUS University MOOP GLS assignment.</string>
    <string name="version">Version</string>
    <string name="created_by">Created by Stanley</string>
    <string name="view_on_github">View project on GitHub</string>
    <string name="view_license">View Open Source License</string>
</resources>
